# HN-Daily-Summarizer

./: .env.example  .env.prod  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: daily_run.yml
src/: bot.py  data_server.py  database.py  fetcher.py  main.py  notifier.py  push_service.py  recv_service.py  summarizer.py  tools.py
src/agent/: engine.py  prompts.py
src/config/: constants.py  settings.py
src/infrastructure/: database.py  llm_client.py  telegram_client.py
src/interfaces/api/: routes.py
src/interfaces/tg_bot/: handlers.py  server.py
src/rag/: ingestion.py  retriever.py  utils.py
src/task/: daily_push.py
src/tools/: __init__.py  registry.py  search_hn_db.py  search_web.py
