[project]
name = "hn-daily-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "ddgs>=9.12.0",
    "fastapi>=0.135.2",
    "openai>=2.30.0",
    "python-telegram-bot>=22.7",
    "requests>=2.33.0",
    "telegramify-markdown>=1.1.1",
    "trafilatura>=2.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
]
